--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,6 @@
 <h2 class="text-center">新增文章</h2>
+<%= render "form" %>
+</div>
 
 <div class="col-md-4 col-md-offset-4">
   <%= simple_form_for [@group,@post] do |f| %>
