--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -12,17 +12,8 @@
         <th> Last Update </th>
       </tr>
     </thead>
+    <%= render :partial => "group_item", :collection => @groups, :as => :group %>
 
-    <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td> # </td>
-          <td> <%= link_to(group.title, group_path(group)) %> </td>
-          <td><%= render_group_description(group) %></td>
-          <td> <%= group.posts.count %> </td>
-          <td> <%= group.updated_at %> </td>
-        </tr>
-      <% end %>
     </tbody>
   </table>
 </div>
